# lapiz

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  lapiz.pot  makepot  output_013ffe790f62d57a4561ab50c516b3af5e2d3fdb  output_52db46fbf9b7758c77457ca9bac9c88ecd1d4d3a  output_5a35c6f42b7528e80b071787a3d0568eb498cd55  output_5cd8bf0b1e2bd1d3f9a403bd3840e685de17d2f5  output_da80e25786a133c2907e0b1212b61360229d337a  update-authors.pl
.tx/: config
2023-05-11-085903-0045-cppcheck@013d531a434d_devel/: 15.html  20.html  23.html  51.html  output_013d531a434d8513901708d0eac465072296c1b8
2023-05-11-090041-32869-1@96cdc3aafb6f_devel/: commitmsg  index.html  report-2851ab.html  report-497206.html  report-727b1a.html  report-95e01c.html  report-9d1d93.html  report-a14ddd.html  report-a36548.html  report-a81489.html  report-ae7ff1.html  report-bc1931.html  report-cad275.html  report-cc2ff0.html  report-d939e0.html  report-dc69ba.html  report-debaf6.html  report-efdf48.html  report-f2c91f.html  report-fedb33.html
2023-05-11-090330-9341-cppcheck@067c862a904a_devel/: 2.html  42.html  output_067c862a904a77d2a8bfbeb51d4053491ceedd6a
2023-05-11-090555-32867-1@4ad4d6d73aaa_devel/: index.html  report-2851ab.html  report-497206.html  report-727b1a.html  report-95e01c.html  report-9d1d93.html  report-a14ddd.html  report-a36548.html  report-a81489.html  report-ae7ff1.html  report-bc1931.html  report-cad275.html  report-cc2ff0.html  report-d939e0.html  report-dc69ba.html  report-debaf6.html  report-efdf48.html  report-f2c91f.html  report-fedb33.html
2023-05-11-090610-1159-cppcheck@96cdc3aafb6f_devel/: 32.html  41.html  49.html  55.html  6.html  output_96cdc3aafb6f46d2a2e8b20753e3d3a8a5545755
2023-05-11-091135-6797-cppcheck@4ad4d6d73aaa_devel/: 34.html  47.html  output_4ad4d6d73aaab48b47c3f7d5b0a152524451ce1f
2023-05-11-091524-32868-1@672897ede3ec_devel/: index.html  report-2851ab.html  report-497206.html  report-727b1a.html  report-95e01c.html  report-9d1d93.html  report-a14ddd.html  report-a36548.html  report-a81489.html  report-ae7ff1.html  report-bc1931.html  report-cad275.html  report-cc2ff0.html  report-d939e0.html  report-dc69ba.html  report-debaf6.html  report-efdf48.html  report-f2c91f.html  report-fedb33.html
2023-05-11-092223-4364-cppcheck@672897ede3ec_devel/: 12.html  33.html  4.html  40.html  46.html  54.html  58.html  61.html  (+4 more)
data/: Makefile.am  lapiz-bugreport.sh.in  lapiz.1  lapiz.appdata.xml.in  lapiz.desktop.in.in  lapiz.pc.in  org.cafe.lapiz.gschema.xml.in  org.mate.lapiz.gschema.xml.in
docs/reference/: Makefile.am  lapiz-docs.sgml  lapiz-sections.txt  lapiz.types
lapiz/: Makefile.am  bacon-message-connection.c  lapiz-app.c  lapiz-app.h  lapiz-close-button.c  lapiz-close-button.h  lapiz-commands-documents.c  lapiz-commands-edit.c  lapiz-commands-file-print.c  lapiz-commands-file.c  lapiz-commands-help.c  lapiz-commands-search.c  lapiz-commands-view.c  lapiz-commands.h  lapiz-debug.c  lapiz-debug.h  lapiz-dirs.c  lapiz-dirs.h  lapiz-document-input-stream.c  lapiz-document-input-stream.h  lapiz-document-loader.c  lapiz-document-loader.h  lapiz-document-output-stream.c  lapiz-document-output-stream.h  lapiz-document-saver.c  lapiz-document-saver.h  lapiz-document.c  lapiz-document.h  lapiz-documents-panel.c  lapiz-documents-panel.h  lapiz-encodings-combo-box.c  lapiz-encodings-combo-box.h  lapiz-encodings.c  lapiz-encodings.h  lapiz-enum-types.c.template  lapiz-enum-types.h.template  lapiz-file-chooser-dialog.c  lapiz-file-chooser-dialog.h  lapiz-gio-document-loader.c  lapiz-gio-document-loader.h  (+65 more)
lapiz/dialogs/: Makefile.am  lapiz-close-confirmation-dialog.c  lapiz-close-confirmation-dialog.h  lapiz-encodings-dialog.c  lapiz-encodings-dialog.h  lapiz-encodings-dialog.ui  lapiz-preferences-dialog.c  lapiz-preferences-dialog.h  lapiz-preferences-dialog.ui  lapiz-search-dialog.c  lapiz-search-dialog.h  lapiz-search-dialog.ui  ui-a11y.suppr
lapiz/smclient/: Makefile.am  eggdesktopfile.c  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c
plugins/filebrowser/: Makefile.am  README.md  filebrowser.plugin.desktop.in  lapiz-file-bookmarks-store.c  lapiz-file-bookmarks-store.h  lapiz-file-browser-enum-register.c.template  lapiz-file-browser-enum-types.c.template  lapiz-file-browser-enum-types.h.template  lapiz-file-browser-error.h  lapiz-file-browser-messages.c  lapiz-file-browser-messages.h  lapiz-file-browser-plugin.c  lapiz-file-browser-plugin.h  lapiz-file-browser-store.c  lapiz-file-browser-store.h  lapiz-file-browser-utils.c  lapiz-file-browser-utils.h  lapiz-file-browser-view.c  lapiz-file-browser-view.h  lapiz-file-browser-widget.c  lapiz-file-browser-widget.h  org.cafe.lapiz.plugins.filebrowser.gschema.xml.in  org.mate.lapiz.plugins.filebrowser.gschema.xml.in
plugins/pythonconsole/pythonconsole/: Makefile.am  __init__.py  config.py  config.ui  console.py  ui-a11y.suppr
plugins/spell/: Makefile.am  README.md  languages-dialog.ui  lapiz-automatic-spell-checker.c  lapiz-automatic-spell-checker.h  lapiz-spell-checker-dialog.c  lapiz-spell-checker-dialog.h  lapiz-spell-checker-language.c  lapiz-spell-checker-language.h  lapiz-spell-checker.c  lapiz-spell-checker.h  lapiz-spell-language-dialog.c  lapiz-spell-language-dialog.h  lapiz-spell-plugin.c  lapiz-spell-plugin.h  lapiz-spell-setup-dialog.ui  lapiz-spell-utils.c  lapiz-spell-utils.h  org.cafe.lapiz.plugins.spell.gschema.xml.in  org.mate.lapiz.plugins.spell.gschema.xml.in  spell-checker.ui  spell.plugin.desktop.in  ui-a11y.suppr
plugins/taglist/: HTML.tags.xml.in  Latex.tags.xml.in  Makefile.am  README.md  XSLT.tags.xml.in  XUL.tags.xml.in  lapiz-taglist-plugin-panel.c  lapiz-taglist-plugin-panel.h  lapiz-taglist-plugin-parser.c  lapiz-taglist-plugin-parser.h  lapiz-taglist-plugin.c  lapiz-taglist-plugin.h  taglist.plugin.desktop.in
plugins/trailsave/: Makefile.am  README.md  lapiz-trail-save-plugin.c  lapiz-trail-save-plugin.h  trailsave.plugin.desktop.in
tools/plugin_template/: Makefile.am  lapiz-plugin.c  lapiz-plugin.desktop.in  lapiz-plugin.h
(+2247 files in other folders)
